--- a/1.ipynb
+++ b/1.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🚬 Tobacco Use & Mortality Prediction 🏥"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load and Merge Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -51,7 +65,6 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load datasets\n",
     "admissions = pd.read_csv(\"admissions.csv\")\n",
     "fatalities = pd.read_csv(\"fatalities.csv\")\n",
     "metrics = pd.read_csv(\"metrics.csv\")\n",
@@ -61,14 +74,12 @@
     "for df in [admissions, fatalities, metrics, prescriptions, smokers]:\n",
     "    df[\"Year\"] = pd.to_numeric(df[\"Year\"], errors=\"coerce\").astype(\"Int64\")\n",
     "\n",
-    "# Merge all datasets on 'Year'\n",
     "merged_df = admissions \\\n",
     "    .merge(fatalities, on=[\"Year\", \"ICD10 Code\", \"ICD10 Diagnosis\", \"Diagnosis Type\", \"Metric\", \"Sex\"], suffixes=(\"_admissions\", \"_fatalities\"), how=\"outer\") \\\n",
     "    .merge(metrics, on=\"Year\", how=\"left\") \\\n",
     "    .merge(prescriptions, on=\"Year\", how=\"left\") \\\n",
     "    .merge(smokers, on=\"Year\", how=\"left\")\n",
     "\n",
-    "# Show merged dataset structure\n",
     "print(\"Final Merged Data Shape:\", merged_df.shape)\n",
     "print(\"Columns in Merged Dataset:\", merged_df.columns)\n"
    ]
@@ -82,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -256,13 +267,18 @@
     }
    ],
    "source": [
-    "# Check basic statistics for numerical columns\n",
     "print(\"Basic Statistics:\\n\", merged_df.describe())\n",
     "\n",
-    "# Check unique values in categorical columns\n",
     "cat_cols = merged_df.select_dtypes(include=[\"object\"]).columns\n",
     "for col in cat_cols:\n",
     "    print(f\"Unique values in {col}:\\n\", merged_df[col].unique(), \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Listing Missing Values"
    ]
   },
   {
@@ -320,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -335,12 +351,7 @@
     }
    ],
    "source": [
-    "# Remove non-numeric columns\n",
     "numeric_df = merged_df.select_dtypes(include=[\"number\"])\n",
-    "\n",
-    "# Now plot the correlation heatmap\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "sns.heatmap(numeric_df.corr(), annot=True, cmap=\"coolwarm\")\n",
@@ -386,8 +397,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -462,8 +480,8 @@
    ],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
+    "import joblib\n",
     "\n",
-    "# Encode categorical columns\n",
     "cat_cols = [\"ICD10 Code\", \"ICD10 Diagnosis\", \"Diagnosis Type\", \"Metric\", \"Sex_x\"]\n",
     "label_encoders = {}\n",
     "\n",
@@ -472,17 +490,14 @@
     "    filtered_df[col] = le.fit_transform(filtered_df[col])\n",
     "    label_encoders[col] = le\n",
     "\n",
-    "# Save encoders for later use in Streamlit\n",
-    "import joblib\n",
     "joblib.dump(label_encoders, \"D:/PROGRAMMING LANGUAGES/PYTHON/JUPYTER NOTEBOOK/streamlit/Tobacco Project/label_encoders.pkl\")\n",
     "\n",
-    "# Show sample after encoding\n",
     "print(filtered_df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -497,21 +512,25 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Define features (X) and target variable (y)\n",
     "X = filtered_df.drop(columns=[\"Value_fatalities\"])\n",
     "y = filtered_df[\"Value_fatalities\"]\n",
     "\n",
-    "# Split dataset into train (80%) and test (20%)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Check dataset shape\n",
     "print(\"Training Data Shape:\", X_train.shape)\n",
     "print(\"Testing Data Shape:\", X_test.shape)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handling missing values to ensure model training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -562,31 +581,26 @@
     }
    ],
    "source": [
-    "# 1️⃣ Ensure all columns are numeric\n",
     "X_train = X_train.apply(pd.to_numeric, errors='coerce')\n",
     "X_test = X_test.apply(pd.to_numeric, errors='coerce')\n",
     "y_train = pd.to_numeric(y_train, errors='coerce')\n",
     "y_test = pd.to_numeric(y_test, errors='coerce')\n",
     "\n",
-    "# 2️⃣ Check for missing values in training data\n",
     "print(\"Missing values in X_train:\\n\", X_train.isnull().sum())\n",
     "print(\"Missing values in y_train:\\n\", y_train.isnull().sum())\n",
     "\n",
-    "# 3️⃣ Fill missing values with median for numerical data\n",
     "X_train.fillna(X_train.median(), inplace=True)\n",
     "X_test.fillna(X_test.median(), inplace=True)\n",
     "\n",
-    "# 4️⃣ Fill missing values in target variable (if any)\n",
     "y_train.fillna(y_train.median(), inplace=True)\n",
     "y_test.fillna(y_test.median(), inplace=True)\n",
     "\n",
-    "# 5️⃣ Verify missing values are removed\n",
     "print(\"✅ Missing values after cleaning:\\n\", X_train.isnull().sum(), y_train.isnull().sum())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -599,13 +613,13 @@
    ],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
+    "import joblib\n",
     "\n",
     "# Train Random Forest Model\n",
     "model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Save trained model\n",
-    "import joblib\n",
     "joblib.dump(model, \"D:/PROGRAMMING LANGUAGES/PYTHON/JUPYTER NOTEBOOK/streamlit/Tobacco Project/mortality_model.pkl\")\n",
     "\n",
     "print(\"✅ Model Training Done & Saved!\")\n"
@@ -613,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,15 +644,12 @@
    "source": [
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "\n",
-    "# Predict on test set\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
-    "# Calculate metrics\n",
     "mae = mean_absolute_error(y_test, y_pred)\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "# Print accuracy metrics\n",
     "print(\"📊 Model Accuracy Metrics:\")\n",
     "print(f\"🔹 Mean Absolute Error (MAE): {mae:.2f}\")\n",
     "print(f\"🔹 Mean Squared Error (MSE): {mse:.2f}\")\n",
@@ -782,6 +793,13 @@
     "plt.title(\"Distribution of Mortality Counts\")\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Thank You 😁🙏"
    ]
   }
  ],
